# heizung

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  db.sql  heizung.mwb
frontend/: .gitignore  composer.json  config.json  cooling.php  createEntityFromDatabase.sh  heating.php  hotwater.php  index.php  overview.php  post.php  save.php
frontend/config/: application.config.php
frontend/config/autoload/: doctrine.local.php.dist  slmlocale.global.php
frontend/css/: styles.css
frontend/js/: general.js
frontend/module/Application/: Module.php
frontend/module/Application/language/: en_US.mo  en_US.po
frontend/module/Application/view/layout/: layout.phtml
frontend/module/Heating/: Module.php
frontend/module/Heating/config/: module.config.php
frontend/module/Heating/data/: captions.pm  config.json
frontend/module/Heating/language/: de_DE.mo  de_DE.po  en_US.mo  en_US.po
frontend/module/Heating/src/Heating/Controller/: HeatingController.php
frontend/module/Heating/src/Heating/Entity/: Measurement.php  WpData.php  WpWriteData.php
frontend/module/Heating/view/heating/heating/: get.phtml  index.phtml
frontend/public/: index.php
frontend/public/css/: styles.css
frontend/public/js/: general.js
frontend/templates/: cooling.tpl  heating.tpl  hotwater.tpl  index.tpl  overview.tpl
include/: mylib.h
lib/: .gitignore  CMakeLists.txt  Makefile  mylib.c
modbus_xmlfiles/: _10011a.xml  _10011b.xml  _C010300.xml  _C010301.xml  _C010400.xml  _C020001.xml  _C10012.xml  _C10012a.xml  _C10012d.xml  _C10013.xml  _C10101a.xml  _C10102b.xml  _C10102c.xml  _C10102d.xml  _CC10002a.xml  config.xml
moxxa-driver/: npreal2_1.18_Build_12020919.tgz
src/: CMakeLists.txt  Makefile  readModbus.c  writeModbus.c
